--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "photoswipe": "^4.1.2",
     "standard-version": "^4.4.0"
   },
+  "dependencies": {
+    "after-dark": ">= 6.7.8"
+  },
   "license": "WTFPL"
 }
