build(npm): add script for conventional commits

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean:css:photoswipe": "cleancss -o static/modules/hall-of-mirrors/photoswipe.css static/modules/hall-of-mirrors/photoswipe.css",
     "test": "while true; do head -n 100 /dev/urandom; sleep 0.1; done | hexdump -C | grep 'ca fe'",
     "update": "npm run copy:photoswipe && ./bin/urlize && npm run clean:css",
-    "release": "standard-version -s"
+    "release": "standard-version -s",
+    "commit": "npx git-cz"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,18 @@
   },
   "devDependencies": {
     "clean-css-cli": "^4.1.11",
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
     "photoswipe": "^4.1.2",
     "standard-version": "^6.0.1"
   },
   "peerDependencies": {
     "after-dark": ">= 6.7.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "license": "WTFPL"
 }
